MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Config__mdt/UAEDDS_Config__mdt.object-meta.xml
<CustomObject>
    <label>UAEDDS Config</label>
    <pluralLabel>UAEDDS Configs</pluralLabel>
</CustomObject>