MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Config__mdt/fields/Default_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Amount_Type__c</fullName>
    <description>Sent as amountType when the mandate has none. Nothing populates Amount_Type__c today; the Stage E screen will capture it.</description>
    <label>Default Amount Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>