MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Config__mdt/fields/Default_Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Minimum_Amount__c</fullName>
    <description>Sent as minAmount when the mandate has none. maxAmount always comes from the mandate and is never defaulted.</description>
    <label>Default Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>