MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Config__mdt/fields/Default_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Frequency__c</fullName>
    <description>Sent as paymentFrequency when the mandate has none. Must be one of the nine vendor frequencies.</description>
    <label>Default Payment Frequency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>