MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Config__mdt/fields/Default_Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Preferred_Payment_Method__c</fullName>
    <description>Sent as userPreferPaymentMethod when the mandate has none. Bank Account or Credit Card.</description>
    <label>Default Preferred Payment Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>