MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Config__mdt/fields/Mandate_Creation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Creation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The D4 feature switch. There is no rollback to FAB mandate creation, so the UAEDDS mandate path ships switched off and is turned on deliberately once proven.</description>
    <label>Mandate Creation Enabled</label>
    <type>Checkbox</type>
</CustomField>